Tried to add the no repeat functionality - not so successful, but everything work

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,10 @@ body {
   content: ", ";
   font-style: normal;
 }
+.tags:before {
+  content: ", ";
+  font-style: normal;
+}
 
 #loadQuote {
   position: fixed;
@@ -68,7 +72,7 @@ body {
   border-radius: 4px;
   border: 2px solid #fff;
   color: #fff;
-  background-color: #36b55c;
+  background-color: #515151;
   padding: 15px 0;
   transition: .5s ;
 }
